<resources>
    <string name="app_name" translatable="false">Smart SoilPH</string>
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>
    <string name="project_title" translatable="false">Smart</string>
    <string name="project_title2" translatable="false">SoilPH</string>
    <string name="feature_title">Soil Data</string>
    <string name="feature_title2">Weather Forecast</string>
    <string name="feature_title3">Reports &amp; Statistics</string>
    <string name="feature_title4">Recommendation History</string>
    <string name="feature_title5">Fertilizer Recommendations</string>
    <string name="feature_title6">User Manual</string>
    <string name="location_info">Current weather at...</string>
    <string name="location" translatable="false">City</string>
    <string name="date" translatable="false">Date</string>
    <string name="temperature" translatable="false">0</string>
    <string name="tv_temperature_symbol" translatable="false">°C</string>
    <string name="weather" translatable="false"></string>
    <string name="humidity">Humidity</string>
    <string name="value_humidity" translatable="false">0%</string>
    <string name="temperature2">Precipitation</string>
    <string name="value_temp" translatable="false">0%</string>
    <string name="wind">Wind Speed</string>
    <string name="value_wind" translatable="false">0km/h</string>
    <string name="day_name" translatable="false">Monday</string>
    <string name="week_date" translatable="false">1 Jan 2024</string>
    <string name="value_temp2" translatable="false">0</string>
    <string name="soil_title">Current soil status</string>
    <string name="soil_info">Select a crop: </string>
    <string name="soil_name">Soil Texture: </string>
    <string-array name="crops">
        <item>Ampalaya</item>
        <item>Asparagus</item>
        <item>Beans - Batao</item>
        <item>Beans - Baguio</item>
        <item>Beans - Dwarf (Variety)</item>
        <item>Beans - Lima (Patani)</item>
        <item>Beans - String (Pole Sitao)</item>
        <item>Beans - Tree (Type)</item>
        <item>Beans - Winged (Segiduillas)</item>
        <item>Broccoli</item>
        <item>Cabbage (Chinese)</item>
        <item>Cabbage (Head)</item>
        <item>Cabbage (Local)</item>
        <item>Carrot</item>
        <item>Cauliflower</item>
        <item>Celery</item>
        <item>Chayote</item>
        <item>Chili (Bell Pepper)</item>
        <item>Chili (Green) (Sinigang)</item>
        <item>Chili (Pepper)</item>
        <item>Condiments (Mint Herb)</item>
        <item>Cucumber</item>
        <item>Eggplant</item>
        <item>Garlic/Onion</item>
        <item>Ginger (Improved)</item>
        <item>Ginger (Local)</item>
        <item>Lettuce (Head)</item>
        <item>Mustard</item>
        <item>Okra (Hybrid)</item>
        <item>Okra (Local)</item>
        <item>Parsnip</item>
        <item>Patola</item>
        <item>Peas</item>
        <item>Pechay</item>
        <item>Potato</item>
        <item>Radish/Turnips</item>
        <item>Squash</item>
        <item>Tomatoes</item>
        <item>Rice: Inbred Light Soils (Wet Season)</item>
        <item>Rice: Inbred Light Soils (Dry Season)</item>
        <item>Rice: Inbred Med-Heavy Soils (Wet Season)</item>
        <item>Rice: Inbred Med-Heavy Soils (Dry Season)</item>
        <item>Rice: Hybrid Light Soils (Wet Season)</item>
        <item>Rice: Hybrid Light Soils (Dry Season)</item>
        <item>Rice: Hybrid Med-Heavy Soils (Wet Season)</item>
        <item>Rice: Hybrid Med-Heavy Soils (Dry Season)</item>
        <item>Rice: Upland (Light Soils)</item>
        <item>Rice: Upland (Med-Heavy Soils)</item>
        <item>Corn: Hybrid</item>
        <item>Corn: OPV (High Yielding Variety)</item>
    </string-array>
    <string name="nitrogen" translatable="false">Nitrogen</string>
    <string name="phosphorus" translatable="false">Phosphorus</string>
    <string name="potassium" translatable="false">Potassium</string>
    <string name="ph_level" translatable="false">pH Level</string>
    <string name="ec_level" translatable="false">EC Level</string>
    <string name="humidity_soil" translatable="false">Moisture</string>
    <string name="temp_soil" translatable="false">Temperature</string>
    <string name="sign1" translatable="false">%</string>
    <string name="sign2" translatable="false">ppm</string>
    <string name="sign3" translatable="false"></string>
    <string name="sign4" translatable="false">mS/cm</string>
    <string name="sign5" translatable="false">°C</string>
    <string name="nitrogen_value" translatable="false">0</string>
    <string name="phosphorus_value" translatable="false">0</string>
    <string name="potassium_value" translatable="false">0</string>
    <string name="ph_level_value" translatable="false">0</string>
    <string name="ec_level_value" translatable="false">0</string>
    <string name="humidity_soil_value" translatable="false">0</string>
    <string name="temp_soil_value" translatable="false">0</string>
    <string name="view_recommend">View Recommendation</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="soil_texture_title">Select Soil Texture</string>
    <string name="soil_texture_info">Please choose a soil texture from the options below.</string>
    <string name="st_info1">Does it feel very grainy/rough?</string>
    <string name="st_info2">Does it feel equally grainy and smooth?</string>
    <string name="st_info3">Does it feel very smooth?</string>
    <string name="gs_1" translatable="false">Sandy Loam</string>
    <string name="gs_2" translatable="false">Sandy Clay Loam</string>
    <string name="gs_3" translatable="false">Sandy Clay</string>
    <string name="gs_4" translatable="false">Silt Loam</string>
    <string name="gs_5" translatable="false">Silty Clay Loam</string>
    <string name="gs_6" translatable="false">Silty Clay</string>
    <string name="gs_7" translatable="false">Loam</string>
    <string name="gs_8" translatable="false">Clay Loam</string>
    <string name="gs_9" translatable="false">Clay</string>
    <string name="btn_apply">Apply</string>
    <string name="date_today" translatable="false">Monday, 5th</string>
    <string name="welcome_user">Welcome back,</string>
    <string name="username" translatable="false">Username</string>
    <string name="exclamation" translatable="false">!</string>
    <string name="soil_button">Soil</string>
    <string name="home_txt1">What do you want to do?</string>
    <string name="weather_button">Weather</string>
    <string name="reports_button">Reports</string>
    <string name="history_button">Recommendation History</string>
    <string name="settings_button" translatable="false">Settings</string>
    <string name="bluetooth_button">Connect to Bluetooth Device</string>
    <string name="manual_button">View User Manual</string>
    <string name="manual_button2" translatable="false">(English/Tagalog)</string>
    <string name="logout_button">🚪 Logout</string>
    <string name="sync_button">🔄 Sync Database</string>
    <string name="language_button">🌏 Change Language</string>
    <string name="title_recommend">Your nutrient requirements are...</string>
    <string name="npk_1" translatable="false">N</string>
    <string name="npk_2" translatable="false">P</string>
    <string name="npk_2_1" translatable="false"><sub>2</sub></string>
    <string name="npk_2_2" translatable="false">O</string>
    <string name="npk_2_3" translatable="false"><sub>5</sub></string>
    <string name="npk_3" translatable="false">K</string>
    <string name="npk_rating1">Low</string>
    <string name="npk_rating2">Moderately High</string>
    <string name="npk_rating3">Sufficient</string>
    <string name="recommend_fertilizer">We recommend the fertilizers below -</string>
    <string name="fertilizer_1">kg of Complete</string>
    <string name="fertilizer_2">kg of Duophos</string>
    <string name="fertilizer_3">kg of Potash</string>
    <string name="fertilizer_cvalue" translatable="false"><b>0</b></string>
    <string name="fertilizer_gvalue1" translatable="false">(14-14-14)</string>
    <string name="fertilizer_gvalue2" translatable="false">(0-22-0)</string>
    <string name="fertilizer_gvalue3" translatable="false">(0-0-60)</string>
    <string name="phLevel" translatable="false">For pH Level</string>
    <string name="ph_sentence">Your pH level is </string>
    <string name="ph_sentence_value1" translatable="false"><b>acidic</b></string>
    <string name="ph_sentence_value2" translatable="false"><b>neutral</b></string>
    <string name="ph_sentence_value3" translatable="false"><b>alkaline</b></string>
    <string name="ph_info1">We recommend to correct your soil pH by consulting with an agriculture expert.</string>
    <string name="ph_info2">Your soil is in perfectly good health!</string>
    <string name="ph_info3">We recommend to correct your soil pH to normal levels by consulting with an agriculture expert.</string>
    <string name="phLevel_title" translatable="false">pH Level</string>
    <string name="return_soil">Return to Soil Data</string>
    <string name="previous_data">View Previous Recommendations</string>
    <string name="rec_history">Recent proposals</string>
    <string name="date_time">Date and Time</string>
    <string name="title_rh_1">Crop &amp; Soil Info</string>
    <string name="title_rh_2">Fertilizer Recommendation Info</string>
    <string name="title_rh_3">NPK &amp; pH Level Info</string>
    <string name="selected_crop">Crop Name</string>
    <string name="selected_crop_desc">Selected Crop</string>
    <string name="selected_soil">Soil Type Name</string>
    <string name="selected_soil_desc">Selected Soil Type</string>
    <string name="fertilizer_value" translatable="false">000 kg</string>
    <string name="npk_value" translatable="false">00 - 00 - 00</string>
    <string name="fertilizer_info1">0 amount of Complete fertilizer used</string>
    <string name="fertilizer_info2">0 amount of Duofos fertilizer used</string>
    <string name="fertilizer_info3">0 amount of Potash fertilizer used</string>
    <string name="npk_info">Required Nutrient<b> Requirements</b></string>
    <string name="phlevel_amount" translatable="false">0</string>
    <string name="phlevel_desc">Amount of pH Level detected in the soil</string>
    <string name="stat_title">Summary Report</string>
    <string name="stat_sub_title">Recent Saves</string>
    <string name="stat_sub_title2">Soil pH Acidity</string>
    <string name="stat_sub_title3">Recent Total Fertilizer Recommendations</string>
    <string name="stat_sub_title4">Soil pH Trend</string>
    <string name="stat_sub_title5">Monthly Average NPK Soil</string>
    <string name="stat_sub_title6">Soil Sample NPK Entry</string>
    <string name="stat_sub_title7">Weekly Soil NPK Entry</string>
    <string name="sub_summary1">There are a total of %1$d Firebase saves, %2$d SQLite saves, and %3$d total saves within the last 7 days.</string>
    <string name="sub_summary2">You have %.0f acidic soils, %.0f neutral soils, and %.0f alkaline soils within the last 7 days.</string>
    <string name="sub_summary3">In total, you have accumulated %.0f fertilizer usage during the last 7 days.</string>
    <string name="sub_summary4">Your recent soil pH level health is %.0f, indicating Alkaline. It\'s not bad for your soil but you might want to aim for an average 5.5-6.5.</string>
    <string name="sub_summary44">Your recent soil pH level health is %.0f, indicating Acidity. It\'s bad for your soil and you might want to consult on how to get it to average 5.5-6.5.</string>
    <string name="sub_summary5">Recently, your soil\'s NPK nutrient requirement is %1$s.</string>
    <string name="sub_summary6">Your daily average soil entry for today.</string>
</resources>