<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoilActivity">

    <!--Background Image -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_weather"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/bg_soil" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    
    <!-- Content Frame -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">


        <!-- Nitrogen Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/nitrogen_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/phosphorus_card"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/nitrogen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nitrogen"
                        android:textAppearance="@style/nutrient_title"/>

                    <TextView
                        android:id="@+id/nitrogen_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nitrogen_value"
                        android:layout_marginTop="8dp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/icon_molecule"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>

        <!-- Phosphorus Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/phosphorus_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/nitrogen_card"
            app:layout_constraintEnd_toStartOf="@id/potassium_card"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/phosphorus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phosphorus"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/phosphorus_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phosphorus_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_molecule"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <!-- Potassium Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/potassium_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/phosphorus_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/potassium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potassium"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/potassium_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phosphorus_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_molecule"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <!-- pH Level Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ph_level_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/nitrogen_card"
            app:layout_constraintStart_toStartOf="@id/nitrogen_card"
            app:layout_constraintEnd_toEndOf="@id/nitrogen_card"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/ph_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_level"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/ph_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_level_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_droplet"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <!-- EC Level Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ec_level_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/phosphorus_card"
            app:layout_constraintStart_toStartOf="@id/phosphorus_card"
            app:layout_constraintEnd_toEndOf="@id/phosphorus_card"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/ec_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ec_level"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/ec_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ec_level_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_ec"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <!-- Humidity Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/humidity_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/ph_level_card"
            app:layout_constraintStart_toStartOf="@id/ph_level_card"
            app:layout_constraintEnd_toEndOf="@id/ph_level_card"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/humidity_soil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_soil"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/humidity_soil_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_soil_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_humidity"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>

        <!-- Temperature Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/temp_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/humidity_card"
            app:layout_constraintStart_toStartOf="@id/humidity_card"
            app:layout_constraintEnd_toEndOf="@id/humidity_card"
            app:cardBackgroundColor="@drawable/opacity"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/temp_soil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_soil"
                    android:textAppearance="@style/nutrient_title"/>

                <TextView
                    android:id="@+id/temp_soil_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_soil_value"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/icon_temp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"/>

        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>