<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/black_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_day_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_name"
                android:textAppearance="@style/day_name"
                app:layout_constraintStart_toStartOf="@id/cl_1"
                app:layout_constraintEnd_toEndOf="@id/cl_1"
                app:layout_constraintTop_toTopOf="@id/cl_1"/>

            <View
                android:id="@+id/hd_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black_50"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_scroll_bar_divider"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_rv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_date_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_date"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/week_date"
                app:layout_constraintStart_toStartOf="@id/cl_1"
                app:layout_constraintEnd_toEndOf="@id/cl_1"
                app:layout_constraintTop_toBottomOf="@id/hd_1"/>

            <ImageView
                android:id="@+id/iv_weather_rv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:elevation="14dp"
                android:src="@drawable/img_partly_cloudy"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/cl_1"
                app:layout_constraintEnd_toEndOf="@id/cl_1"
                app:layout_constraintTop_toBottomOf="@id/tv_date_rv"/>

            <TextView
                android:id="@+id/tv_temp_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_temp2"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/value_temp2"
                app:layout_constraintStart_toStartOf="@id/cl_1"
                app:layout_constraintEnd_toEndOf="@id/cl_1"
                app:layout_constraintTop_toBottomOf="@id/iv_weather_rv"/>

            <TextView
                android:id="@+id/tv_symbol_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_temperature_symbol"
                android:textAppearance="@style/tv_temp_symbol2"
                app:layout_constraintStart_toEndOf="@id/tv_temp_rv"
                app:layout_constraintTop_toTopOf="@id/tv_temp_rv"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>