<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Header-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorOnPrimary"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="10dp">
        <!--collapseIcon used to close side bar-->

        <ImageView
            android:id="@+id/toolbar_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_smartsoil"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_title"
                android:textAppearance="@style/project_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_title2"
                android:textAppearance="@style/project_title2"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_rec_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/rec_history"
            android:text="@string/rec_history"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    <!-- Horizontal Divider -->
    <View
        android:id="@+id/hd_1"
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:background="@drawable/custom_scroll_bar_divider"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_rec_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommendationHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hd_1"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>